--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ td{
 
 #inputBox{
     background-color: #4e494d;
-    text-align: right;
+    text-align: left;
     width: 100%;
     font-size: 2cm;
     color: #fff;
